# OPEP-Oil-Rag-Pipeline

./: README.md  app.py  docker-compose.yml  processed_files.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
qdrant_storage/: raft_state.json
src/agent/: graph.py  nodes.py
src/core/: config.py  logger.py
src/etl/: ingest.py
src/schemas/: models.py
src/vectorstore/: qdrant.py
