[project]
name = "rag-pipeline"
version = "0.1.0"
description = "OPEP Market Intelligence RAG Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "python-dotenv>=1.2.2",
    "langchain",
    "langchain-google-genai",
    "langchain-community",
    "langchain-qdrant",
    "qdrant-client",
    "pydantic",
    "pydantic-settings",
    "pypdf",
    "langfuse",
    "langgraph",
    "streamlit",
    "fastembed"
]

[tool.uv]
dev-dependencies = [
    "ruff",
]

